[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["lucasbagge <lucasbagge@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

